--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,4 @@
-spring.datasource.driver-class-name			= org.h2.Driver
-spring.datasource.url						= jdbc:h2:mem:testdb;MODE=PostgreSQL
+connection.driver					= UNKNOWN
+connection.url						= UNKNOWN
+connection.username					= UNKNOWN
+connection.password					= UNKNOWN
